# yolov5-seg-ncnn

./: README.md
Android_demo/: README.md
Android_demo/app/: build.gradle
Android_demo/app/src/main/: AndroidManifest.xml
Android_demo/app/src/main/assets/: yolov5n-seg.param  yolov5s-seg.param
Android_demo/app/src/main/java/com/tencent/ncnnyolo/: MainActivity.java  NcnnYolo.java
Android_demo/app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolo.h  yoloncnn.cpp
Android_demo/app/src/main/res/values/: strings.xml
demo/: CMakeLists.txt  README.md
demo/lib/cmake/ncnn/: ncnn.cmake
demo/src/: yolov5_seg.cpp
include/ncnn/: ncnn_export.h  platform.h
lib/cmake/ncnn/: ncnnConfig.cmake
src/: yolov5_seg.cpp
